# SDLLuaJIT-android

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: android-launch.lua  luajit-args
app/src/main/assets/lfs_ffi/: distinfo  lfs_ffi.lua
app/src/main/assets/sdl/: README.md  app.lua  app2.lua  app3.lua  assert.lua  distinfo  mouse.lua  sdl.lua  setup.lua
app/src/main/assets/sdl/ffi/: sdl3.lua  sdl_image.lua  sdl_mixer.lua
app/src/main/assets/sdl/tests/: app.lua  audio.lua  clipboard.lua  events.lua  minimal.lua
app/src/main/cpp/: CMakeLists.txt  luajit.c  make-luajit-aarch64.sh  make-luajit-armv7a.sh  make-luajit-i686.sh  make-luajit-x86_64.sh
app/src/main/java/io/github/thenumbernine/SDLLuaJIT/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
push-to-files/: README.md  android-launch.lua  android-setup.lua  config.rua  copy-file-to-phone-projectdir.rua  copy-from-local-lua-projects.rua  copy-libs-from-phone-projects.rua  copy-libs-to-local-lua-projects.rua  copy-phone-project-file-to-app-files.rua  copy-phone-project-file-to-here.rua  copy-to-local-lua-projects.sh  copy-to-lua-projects.sh  launch-android.lua  launch-sdl-luajit.sh  luajit-args  luajit-on-android.sh  re-rpath-so.sh  run-as.rua  write-to-files.rua
